styles/assignment1.css
* {
    margin: 0;
    padding: 0;
    font-family: sans-serif;
}


/* First section> banner style */

.banner-img {

    background-image: url('../images/banner/banner1.png');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    height: 600px;

}

.banner-txt {

    font-weight: 900;
    font-size: 47px;
    text-align: right;
    line-height: 76px;
    padding-right: 160px;
    padding-top: 100px;

}

.banner-para {

    text-align: right;
    color: #444343;
    font-size: 14px;
    line-height: 26px;
    padding-right: 160px;
    padding-top: 25px;

}

/* button css */

.btn-contact {

    height: 55px;
    background-color: rgb(255, 115, 0);
    color: #fff;
    padding: 15px 20px;
    font-weight: 600;
    font-size: 20px;
    border-radius: 4px;
    border: 0;
    position: absolute;
    right: 60px;
    top: 490px;
    margin-right: 100px;

}

/* Second section> About Myself */


.about-me {

    display: flex;
    justify-content: center;

}

.person-pic {

    padding-left: 188px;
    padding-top: 100px;
    padding-right: 75px;
    height: 585px;
    width: 460px;
}


.section-topic1 {
    text-align: left;
    padding-top: 280px;

}

.section-title {

    font-weight: 700;
    font-size: 35px;
    line-height: 47px;
    color: #151414;

}


.font-design {

    color: #444343;
    font-size: 13px;

}

.section-desc {

    padding-top: 24px;
    padding-right: 110px;
    color: #444343;
    font-size: 13px;
    line-height: 26px;

}

.pointers {

    padding-top: 16px;

}

.pointers>p {

    margin-bottom: 9px;
}


.tickmark {

    height: 11.5px;
    width: 11.5px;
}


/* Third section> My Plans */

.my-plans {

    padding-top: 130px;

}

.section-topic {

    text-align: center;
}

.plan-title {

    font-weight: 700;
    font-size: 25px;
    line-height: 35px;
    color: #151414;
    padding-top: 8px;
}

.plan-desc {
    font-weight: 500;
    font-size: 16px;
    line-height: 29px;
    color: #737272;
}

.plan1,
.plan2,
.plan3 {

    padding-right: 96px;
}

.plan-img {

    height: 65px;
    width: 65px;
}

.section-content {

    padding-top: 50px;
    display: flex;
    justify-content: center;

}


/* Fourth section> Contact */

.contact {

    display: flex;
    justify-content: center;
    margin-top: 100px;

}


.call-now {

    background-image: linear-gradient(to right, #008905 0%, rgba(51, 241, 34, 0) 100%), url('/images/watch.png');

    background-repeat: no-repeat;
    background-size: contain;
    height: 250px;
    width: 950px;
    border-radius: 8px;

}

.motto {

    font-weight: 700;
    font-size: 35px;
    line-height: 47px;
    color: #FFFFFF;
    padding-top: 50px;
    padding-left: 60px;

}

.btn-call {

    height: 55px;
    background-color: #FFFFFF;
    color: #008905;
    padding: 15px 20px;
    font-weight: 600;
    font-size: 20px;
    border-radius: 4px;
    border: 0;
    margin-left: 60px;
    margin-top: 24px;
}


/* Fifth and final section> footer */

.footer {

    display: flex;
    justify-content: space-around;
    margin-top: 130px;
    padding-top: 130px;
    background-color: #151414;
    height: 400px;
}


.footer-heading {

    font-weight: 700;
    font-size: 35px;
    line-height: 53px;
    color: #F8F8F8;
    line-height: 26px;
}

.footer-detail {

    padding-top: 16px;
    line-height: 26px;
    color: #FFFFFF;
    font-size: 13px;
    text-align: left;
}

.footer-icons{

    display: flex;
    padding-top: 30px;
}

.icon{

    height: 37px;
    width: 37px;
    padding-right: 12px;
}


.subscribe-title {

    font-size: 25px;
    line-height: 29px;
    color: #F8F8F8;
    padding-bottom: 31px;
}

.email {

    width: 280px;
    height: 55px;
    background-color: #151414;
    border: 1px solid white;
}

.btn-sub{

    height: 55px;
    background-color: #FFFFFF;
    color: #008905;
    padding: 15px 20px;
    font-weight: 600;
    font-size: 20px;
    border-radius: 4px;
    border: 0;
    margin-top: 16px;

}

